overflow fix on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -143,12 +143,13 @@ button {
   background-color: $black;
   color: $blue;
   padding: 72px 0;
+  overflow: hidden;
 }
 
 #flowers {
   background-color: $black;
   color: $green;
-
+  overflow: hidden;
 }
 
 #flowers-success {
